--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,7 +1,9 @@
 {
-
+  "AppSettings": {
+    "Token": "Super Secret Key"
+  },
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=DatingApp.db"
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
