--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,14 +1,19 @@
 {
-  "AppSettings": {
-    "Token": "Super Secret Key"
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "AppSettings": {
+        "Token": "Super Secret Key"
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DatingApp.db"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "CloudinarySettings": {
+        "CloudName": "dnyeh5g3t",
+        "ApiKey": "793723432756539",
+        "ApiSecret": "aCgfpzpO_rsLFahgeuALYD-o7Ik"
     }
-  },
-  "AllowedHosts": "*"
 }
